test/library/sungeun/warnings/useExtraSemicolon.good
WARN ME, PLEASE!
useExtraSemicolon.chpl:4: error: 'blah' undeclared (first use this function)
